Remove number form status

--- a/templates/admin.tmpl
+++ b/templates/admin.tmpl
@@ -133,8 +133,7 @@
 							<div class="form-group">
 								<label class="col-lg-2 control-label" for="textinput">Status</label>
 								<div class="col-lg-10">
-									<input class="form-control" type='number' name="Status" ng-model="user.Status"/>
-									<span class="error" ng-show="myForm.input.$error.number">Is NOT a number!</span>
+									<input class="form-control" type='text' name="Status" ng-model="user.Status"/>
 								</div>
 							</div>
 						</div>
@@ -202,8 +201,7 @@
 							<div class="form-group">
 								<label class="col-lg-2 control-label" for="textinput">Status</label>
 								<div class="col-lg-10">
-									<input class="form-control" type='number' name="Status" ng-model="user.Status"/>
-									<span class="error" ng-show="myForm.input.$error.number">Is NOT a number!</span>
+									<input class="form-control" type='text' name="Status" ng-model="user.Status"/>
 								</div>
 							</div>
 						</div>
